# AIops

./: .env.example  .gitignore  2026-刘一舟-后端开发-Agent方向.docx  PROJECT_CONTEXT.md  README.md  docker-compose.yml  import_rag_test_data.py  init_user.py  init_user.sql  package-lock.json  rag_test_documents.json  rag_validation_test.py  rag_validation_test_data.json  test_rag.py  两页摘要_讨论稿.md  任务书.doc  修改说明.md  后端日志 .txt  外文翻译.docx  开题报告.docx  开题报告_修改版.md  开题报告_精简版.docx  开题报告_精简版.md  文献综述.docx  文献综述_修改版.md  项目Wiki知识库.md
anomaly-detection-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
anomaly-detection-service/app/: __init__.py  config.py  main.py
anomaly-detection-service/app/api/routes/: __init__.py  detection.py  health.py
anomaly-detection-service/app/core/: __init__.py  detector_base.py  pyod_detector.py  pysad_detector.py
anomaly-detection-service/app/models/: __init__.py  schemas.py
anomaly-detection-service/app/netdata/: __init__.py  client.py
anomaly-detection-service/app/services/: __init__.py  detection_service.py
anomaly-detection-service/tests/: conftest.py  test_api.py  test_detectors.py
config/: milvus_collection.yaml
docs/: deployment_guide.md  evaluation_report.md  system_architecture.md  thesis_outline.md  two_page_abstract.md
evaluation/: run_evaluation.py  test_cases.json
netdata-ai-backend/: Dockerfile  docker-compose.yml  pom.xml
netdata-ai-frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
ollama_models/: id_ed25519  (+1 more)
(+402 files in other folders)
